# QvPersonal

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/icons/: resources.qrc
cmake/: qrencode.cmake  qv2ray-sources.cmake
src/: Qv2rayApplication.cpp  Qv2rayApplication.hpp  main.cpp
src/components/AutoLaunchHelper/: AutoLaunchHelper.cpp
src/components/ConnectionModelHelper/: ConnectionModelHelper.cpp  ConnectionModelHelper.hpp
src/components/DarkmodeDetector/: DarkmodeDetector.cpp  DarkmodeDetector.hpp
src/components/GeositeReader/: GeositeReader.cpp  GeositeReader.hpp  picoproto.cc
src/components/GuiPluginHost/: GuiPluginHost.cpp  GuiPluginHost.hpp
src/components/LogHighlighter/: LogHighlighter.cpp
src/components/MessageBus/: MessageBus.hpp
src/components/PortDetector/: PortDetector.cpp
src/components/ProxyConfigurator/: ProxyConfigurator.cpp
src/components/RouteSchemeIO/: RouteSchemeIO.hpp
src/components/SpeedWidget/: SpeedWidget.cpp
src/components/StyleManager/: StyleManager.cpp  StyleManager.hpp
src/models/: SettingsModels.hpp  V2RayModels.hpp
src/plugins/PluginsCommon/: V2RayModels.hpp
src/plugins/common/: CommonTypes.hpp  V2RayModels.hpp
src/plugins/internal/: InternalPlugin.cpp  InternalPlugin.hpp  InternalProfilePreprocessor.cpp  InternalProfilePreprocessor.hpp
src/plugins/protocols/: BuiltinProtocolPlugin.hpp  QvPlugin-BuiltinProtocolSupport.cmake  plugin.cmake
src/plugins/protocols/core/: OutboundHandler.cpp  OutboundHandler.hpp
src/plugins/protocols/ui/: Interface.hpp  PluginSettingsWidget.cpp  PluginSettingsWidget.hpp
src/plugins/protocols/ui/inbound/: dokodemo-door.cpp  dokodemo-door.hpp  httpin.cpp  httpin.hpp  socksin.cpp  socksin.hpp
src/plugins/protocols/ui/outbound/: blackhole.cpp  blackhole.hpp  dns.cpp  dns.hpp  freedom.cpp  freedom.hpp  httpout.cpp  httpout.hpp  loopback.cpp  loopback.hpp  shadowsocks.cpp  shadowsocks.hpp  socksout.cpp  socksout.hpp  vless.cpp  vless.hpp  vmess.cpp  vmess.hpp
src/plugins/subscription-adapters/: BuiltinSubscriptionAdapter.hpp  QvPlugin-BuiltinSubscriptionAdapters.cmake  plugin.cmake
src/plugins/subscription-adapters/core/: SubscriptionAdapter.cpp  SubscriptionAdapter.hpp
src/plugins/v2ray/: BuiltinV2RayCorePlugin.cpp  BuiltinV2RayCorePlugin.hpp  CMakeLists.txt  plugin.cmake
src/plugins/v2ray/common/: CommonHelpers.cpp  CommonHelpers.hpp  SettingsModels.hpp
src/plugins/v2ray/core/: Filters.hpp  V2RayAPIStats.cpp  V2RayAPIStats.hpp  V2RayKernel.cpp  V2RayKernel.hpp  V2RayProfileGenerator.cpp  V2RayProfileGenerator.hpp
src/plugins/v2ray/ui/: w_V2RayKernelSettings.cpp  w_V2RayKernelSettings.hpp  w_V2RayKernelSettings.ui
src/ui/: WidgetUIBase.hpp
src/ui/node/: NodeBase.hpp  NodeDispatcher.cpp  NodeDispatcher.hpp
src/ui/node/models/: ChainOutboundNodeModel.cpp  InboundNodeModel.cpp  OutboundNodeModel.cpp  RuleNodeModel.cpp
src/ui/node/widgets/: BalancerWidget.cpp  BalancerWidget.hpp  ChainOutboundWidget.cpp  ChainOutboundWidget.hpp  ChainWidget.cpp  ChainWidget.hpp  ChainWidget.ui  InboundOutboundWidget.cpp  InboundOutboundWidget.hpp  InboundOutboundWidget.ui  RuleWidget.cpp  RuleWidget.hpp
src/ui/widgets/: ConnectionInfoWidget.cpp  ConnectionInfoWidget.hpp  ConnectionInfoWidget.ui  ConnectionItemWidget.cpp  ConnectionItemWidget.hpp
src/ui/widgets/complex/: ChainEditorWidget.cpp  ChainEditorWidget.hpp  RoutingEditorWidget.cpp  RoutingEditorWidget.hpp
src/ui/widgets/editors/: DnsSettingsWidget.cpp  DnsSettingsWidget.hpp  RouteSettingsMatrix.cpp  RouteSettingsMatrix.hpp  StreamSettingsWidget.cpp  StreamSettingsWidget.hpp
src/ui/windows/: w_AboutWindow.cpp  w_AboutWindow.hpp  w_AboutWindow.ui  w_GroupManager.cpp  w_GroupManager.hpp  w_GroupManager.ui  w_ImportConfig.cpp  w_ImportConfig.hpp  w_MainWindow.cpp  w_MainWindow.hpp  w_MainWindow.ui  w_MainWindow_extra.cpp  w_PluginManager.cpp  w_PluginManager.hpp  w_PluginManager.ui  w_PreferencesWindow.cpp  w_PreferencesWindow.hpp  w_PreferencesWindow.ui  w_ScreenShot_Core.cpp
src/ui/windows/editors/: w_InboundEditor.cpp  w_InboundEditor.hpp  w_JsonEditor.cpp  w_JsonEditor.hpp  w_OutboundEditor.cpp  w_OutboundEditor.hpp  w_RoutesEditor.cpp  w_RoutesEditor.hpp
